fix: properly set queue state

--- a/src/renderer/src/assets/base.css
+++ b/src/renderer/src/assets/base.css
@@ -113,7 +113,7 @@
 
 @layer base {
   * {
-    @apply border-border outline-ring/50;
+    @apply border-border outline-ring/50 select-none;
   }
   body {
     @apply bg-background text-foreground;
